test/bad/classes/cmp01.px

class A def
    Int x

class B def
    Int x

A() == B()
